# mcicda-stub

./: CMakeLists.txt  LICENSE  README.md  mcicda.def  mcicda_stub.c
.github/workflows/: build.yml
